testCases/semantic-error/semantic-error.cpp
int sum(int x, int y){
  float z = 10;
  return z;
}
void main()
{
  int x = 10;
  int x = 11;

  int y;
  x = y;

  int z;

  int a = 10;
  float b = a;

  const int c = 10;
  c = 20;

  switch(x){
    case 1:
      x = 1;
      break;
    case 1:
      x = 10;
      break;
    default:
      x = 2;
    default:
      x = 3;
  }

  int t = x(a,b);

  int test = sum(x);

}