testCases/semantic-error/semantic-error.err
data/semantic-error.cpp:1:20: warning: the value of variable 'int y' is never used
int sum(int x, int y){
                   ^
data/semantic-error.cpp:1:13: warning: the value of variable 'int x' is never used
int sum(int x, int y){
            ^
data/semantic-error.cpp:8:7: error: 'int x' redeclared
  int x = 11;
      ^
data/semantic-error.cpp:11:7: error: variable or field 'y' used without being initialized
  x = y;
      ^
data/semantic-error.cpp:19:3: error: assignment of read-only variable 'const int c'
  c = 20;
  ^
data/semantic-error.cpp:25:5: error: duplicate case value
    case 1:
    ^~~~
data/semantic-error.cpp:22:5: note: previously used here
    case 1:
    ^~~~
data/semantic-error.cpp:30:5: error: multiple default labels in one switch
    default:
    ^~~~~~~
data/semantic-error.cpp:34:11: error: 'x' cannot be used as a function
  int t = x(a,b);
          ^
data/semantic-error.cpp:36:14: error: too few arguments to function 'int sum(int, int)'
  int test = sum(x);
             ^~~
data/semantic-error.cpp:36:7: warning: the value of variable 'int test' is never used
  int test = sum(x);
      ^~~~
data/semantic-error.cpp:34:7: warning: the value of variable 'int t' is never used
  int t = x(a,b);
      ^
data/semantic-error.cpp:13:7: warning: the value of variable 'int z' is never used
  int z;
      ^
data/semantic-error.cpp:18:13: warning: the value of variable 'const int c' is never used
  const int c = 10;
            ^
